tests/samples/negative/generics/generic_enum_unsupported.ax
module generic_enum_unsupported;

enum Option[T]: u8 {
    some(T) = 1,
    none = 2,
}

fn main() -> i32 {
    return 0;
}
